onetouch-frontend/onetouch_template/template/lb_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: qcloud 
    kubernetes.io/ingress.existLbId: lb-2o93xg4m
    kubernetes.io/ingress.http-rules: '[{"host":"frontend.txdemo.run","path":"/","backend":{"serviceName":"touch-frontend-service","servicePort":"80"}}]'
  name: onetouch-ingress
  namespace: default
spec:
  rules:
  - host: frontend.txdemo.run
    http:
      paths:
      - backend:
          serviceName: touch-frontend-service
          servicePort: 80
        path: /
